--- a/5-Software_Testing-V.html
+++ b/5-Software_Testing-V.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Software_Testing - V - eYFi-Mega Software Beta-Testing Program</title>
+        <title>Software Testing - V - eYFi-Mega Software Beta-Testing Program</title>
         
         
 
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="0-1-Welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item expanded "><a href="0-2-Announcements.html"><strong aria-hidden="true">2.</strong> Announcements</a></li><li class="chapter-item expanded "><a href="1-Software_Testing-I.html"><strong aria-hidden="true">3.</strong> Software Testing - I</a></li><li class="chapter-item expanded "><a href="2-Software_Testing-II.html"><strong aria-hidden="true">4.</strong> Software Testing  - II</a></li><li class="chapter-item expanded "><a href="3-Software_Testing-III.html"><strong aria-hidden="true">5.</strong> Software_Testing - III</a></li><li class="chapter-item expanded "><a href="4-Software_Testing-IV.html"><strong aria-hidden="true">6.</strong> Software_Testing - IV</a></li><li class="chapter-item expanded "><a href="5-Software_Testing-V.html" class="active"><strong aria-hidden="true">7.</strong> Software_Testing - V</a></li><li class="chapter-item expanded "><a href="6-Version_Control-I.html"><strong aria-hidden="true">8.</strong> Version_Control - I</a></li><li class="chapter-item expanded "><a href="7-Version_Control-II.html"><strong aria-hidden="true">9.</strong> Version_Control - II</a></li><li class="chapter-item expanded "><a href="8-Version_Control-III.html"><strong aria-hidden="true">10.</strong> Version_Control - III</a></li><li class="chapter-item expanded "><a href="9-Software_Versioning-I.html"><strong aria-hidden="true">11.</strong> Software_Versioning - I</a></li><li class="chapter-item expanded "><a href="10-Software_Versioning-II.html"><strong aria-hidden="true">12.</strong> Software Versioning - II</a></li><li class="chapter-item expanded "><a href="11-Beta_Testing_1.html"><strong aria-hidden="true">13.</strong> Beta-Testing 1 - Arduino IDE</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="0-1-Welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item expanded "><a href="0-2-Announcements.html"><strong aria-hidden="true">2.</strong> Announcements</a></li><li class="chapter-item expanded "><a href="1-Software_Testing-I.html"><strong aria-hidden="true">3.</strong> Software Testing - I</a></li><li class="chapter-item expanded "><a href="2-Software_Testing-II.html"><strong aria-hidden="true">4.</strong> Software Testing  - II</a></li><li class="chapter-item expanded "><a href="3-Software_Testing-III.html"><strong aria-hidden="true">5.</strong> Software Testing - III</a></li><li class="chapter-item expanded "><a href="4-Software_Testing-IV.html"><strong aria-hidden="true">6.</strong> Software Testing - IV</a></li><li class="chapter-item expanded "><a href="5-Software_Testing-V.html" class="active"><strong aria-hidden="true">7.</strong> Software Testing - V</a></li><li class="chapter-item expanded "><a href="6-Version_Control-I.html"><strong aria-hidden="true">8.</strong> Version Control - I</a></li><li class="chapter-item expanded "><a href="7-Version_Control-II.html"><strong aria-hidden="true">9.</strong> Version Control - II</a></li><li class="chapter-item expanded "><a href="8-Version_Control-III.html"><strong aria-hidden="true">10.</strong> Version Control - III</a></li><li class="chapter-item expanded "><a href="9-Software_Versioning-I.html"><strong aria-hidden="true">11.</strong> Software Versioning - I</a></li><li class="chapter-item expanded "><a href="10-Software_Versioning-II.html"><strong aria-hidden="true">12.</strong> Software Versioning - II</a></li><li class="chapter-item expanded "><a href="11-Beta_Testing_1.html"><strong aria-hidden="true">13.</strong> Beta-Testing 1 - Arduino IDE</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -170,6 +170,7 @@
 <tr><td>Alpha testing may require long execution cycle.</td><td>Beta testing requires only a few weeks of execution.</td></tr>
 <tr><td>Developers can immediately address the critical issues or fixes in alpha testing.</td><td>Most of the issues or feedback collected from beta testing will be implemented in future versions of the product.</td></tr>
 </tbody></table>
+<hr />
 
                     </main>
 
