background alpha decreased

--- a/1-welcome.html
+++ b/1-welcome.html
@@ -168,7 +168,7 @@
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -188,9 +188,9 @@
 <li>Software Versioning</li>
 </ol>
 <p>We take no credit in the preparation of these articles. We have just embedded those articles here for your convenience. So, before starting with the Beta-Testing of eYFi-Mega Software we would suggest you to go through the articles in order to understand the procedure and your role in this program better.</p>
-<p>Over the next few weeks we will systematically release Beta-Testing document from each of our software here on this website, which you can consider your one stop destination for all Beta-Testing Program related information. So, Keep an eye on the <strong>Announcement Page</strong> for updates. <strong>Github Issues</strong> page of respective software will be used to notify any bugs in the software. Tutorial of which can be found <a href="https://www.youtube.com/watch?v=WMykv2ZMyEQ">here</a>. We have also setup a dedicated <strong>Discord Server</strong> for this program, where we all can interact. If you have any queries you can reach us on the Discord Server.</p>
+<p>Over the next few weeks we will systematically release Beta-Testing document from each of our software here on this website, which you can consider your one stop destination for all Beta-Testing Program related information. So, Keep an eye on the <strong>Bulletin Board</strong> for all the updates and links. <strong>Github Issues</strong> page of respective software will be used to notify any bugs in the software. Tutorial of which can be found <a href="https://www.youtube.com/watch?v=WMykv2ZMyEQ">here</a>. We have also setup a dedicated <strong>Discord Server</strong>, invite link of which you must have received in your mail, for this program, where we all can interact. If you have any queries you can reach us on the Discord Server.</p>
 <p>Happy Beta-Testing!</p>
-
+<img src="./media/eyfi-mega-3dimage.png" alt="eyfi-mega" class="center">
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
