--- a/2-bulletin-board.html
+++ b/2-bulletin-board.html
@@ -168,7 +168,7 @@
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -179,6 +179,29 @@
 </style>
 <img src="http://mooc.e-yantra.org/img/eYantra_logo.svg" alt="Paris" class="center">
 <img src="http://mooc.e-yantra.org/img/EyantraLogoMini.png" class="back">
+<h2><a class="header" href="#announcements" id="announcements">Announcements</a></h2>
+<ul>
+<li><strong>[02/09/2020]</strong> Arduino IDE (eYFi-Mega) Beta-Testing is realeased. Checkout the beta-testing <a href="https://e-yantra-r3.github.io/eyfi-mega-sw-beta-testing-website/13-beta-testing-1-arduino-ide.html">page</a>. Deadline to complete Beta-Testing of Arduino IDE is <code>16/09/2020</code>.
+<ul>
+<li><strong>Title</strong>: Arduino IDE (eYFi-Mega) Beta-Testing</li>
+<li><strong>Page</strong>:  <a href="https://e-yantra-r3.github.io/eyfi-mega-sw-beta-testing-website/13-beta-testing-1-arduino-ide.html">Click Here</a></li>
+<li><strong>Start Date</strong>: <code>02/09/2020</code></li>
+<li><strong>End Date</strong>: <code>16/09/2020</code></li>
+</ul>
+</li>
+</ul>
+<h2><a class="header" href="#general-instructions" id="general-instructions">General Instructions</a></h2>
+<ul>
+<li>All the bugs which you find should be reported on Github Issues Page of the respective software. Also make sure that you tag the issue as a <code>bug</code> before you raise an issue on the Issues Page.</li>
+<li>You are expected to test each of the software on both Windows and Linux. Make sure to include your on which OS did you encounter the bug.</li>
+<li>You can also use Github Issues Page of the respective software to request and feature needed in the software. Make sure to tag it as <code>enhancements</code>.</li>
+<li>In case of any query or doubt you can reach us on Discord.</li>
+</ul>
+<h2><a class="header" href="#useful-links" id="useful-links">Useful Links</a></h2>
+<ul>
+<li><strong>eYFi-Mega Products Page</strong>: <a href="http://products.e-yantra.org/eyfi-mega/">Click Here</a></li>
+</ul>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
