--- a/print.html
+++ b/print.html
@@ -170,7 +170,7 @@
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -190,9 +190,9 @@
 <li>Software Versioning</li>
 </ol>
 <p>We take no credit in the preparation of these articles. We have just embedded those articles here for your convenience. So, before starting with the Beta-Testing of eYFi-Mega Software we would suggest you to go through the articles in order to understand the procedure and your role in this program better.</p>
-<p>Over the next few weeks we will systematically release Beta-Testing document from each of our software here on this website, which you can consider your one stop destination for all Beta-Testing Program related information. So, Keep an eye on the <strong>Announcement Page</strong> for updates. <strong>Github Issues</strong> page of respective software will be used to notify any bugs in the software. Tutorial of which can be found <a href="https://www.youtube.com/watch?v=WMykv2ZMyEQ">here</a>. We have also setup a dedicated <strong>Discord Server</strong> for this program, where we all can interact. If you have any queries you can reach us on the Discord Server.</p>
+<p>Over the next few weeks we will systematically release Beta-Testing document from each of our software here on this website, which you can consider your one stop destination for all Beta-Testing Program related information. So, Keep an eye on the <strong>Bulletin Board</strong> for all the updates and links. <strong>Github Issues</strong> page of respective software will be used to notify any bugs in the software. Tutorial of which can be found <a href="https://www.youtube.com/watch?v=WMykv2ZMyEQ">here</a>. We have also setup a dedicated <strong>Discord Server</strong>, invite link of which you must have received in your mail, for this program, where we all can interact. If you have any queries you can reach us on the Discord Server.</p>
 <p>Happy Beta-Testing!</p>
-<style>
+<img src="./media/eyfi-mega-3dimage.png" alt="eyfi-mega" class="center"><style>
 .back{
 	position: fixed;
 	width: 300px;
@@ -201,7 +201,7 @@
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -211,7 +211,30 @@
 }
 </style>
 <img src="http://mooc.e-yantra.org/img/eYantra_logo.svg" alt="Paris" class="center">
-<img src="http://mooc.e-yantra.org/img/EyantraLogoMini.png" class="back"><style>
+<img src="http://mooc.e-yantra.org/img/EyantraLogoMini.png" class="back">
+<h2><a class="header" href="#announcements" id="announcements">Announcements</a></h2>
+<ul>
+<li><strong>[02/09/2020]</strong> Arduino IDE (eYFi-Mega) Beta-Testing is realeased. Checkout the beta-testing <a href="https://e-yantra-r3.github.io/eyfi-mega-sw-beta-testing-website/13-beta-testing-1-arduino-ide.html">page</a>. Deadline to complete Beta-Testing of Arduino IDE is <code>16/09/2020</code>.
+<ul>
+<li><strong>Title</strong>: Arduino IDE (eYFi-Mega) Beta-Testing</li>
+<li><strong>Page</strong>:  <a href="https://e-yantra-r3.github.io/eyfi-mega-sw-beta-testing-website/13-beta-testing-1-arduino-ide.html">Click Here</a></li>
+<li><strong>Start Date</strong>: <code>02/09/2020</code></li>
+<li><strong>End Date</strong>: <code>16/09/2020</code></li>
+</ul>
+</li>
+</ul>
+<h2><a class="header" href="#general-instructions" id="general-instructions">General Instructions</a></h2>
+<ul>
+<li>All the bugs which you find should be reported on Github Issues Page of the respective software. Also make sure that you tag the issue as a <code>bug</code> before you raise an issue on the Issues Page.</li>
+<li>You are expected to test each of the software on both Windows and Linux. Make sure to include your on which OS did you encounter the bug.</li>
+<li>You can also use Github Issues Page of the respective software to request and feature needed in the software. Make sure to tag it as <code>enhancements</code>.</li>
+<li>In case of any query or doubt you can reach us on Discord.</li>
+</ul>
+<h2><a class="header" href="#useful-links" id="useful-links">Useful Links</a></h2>
+<ul>
+<li><strong>eYFi-Mega Products Page</strong>: <a href="http://products.e-yantra.org/eyfi-mega/">Click Here</a></li>
+</ul>
+<style>
 .back{
 	position: fixed;
 	width: 300px;
@@ -220,7 +243,7 @@
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -275,7 +298,7 @@
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -372,7 +395,7 @@ Checking number of processor cycles.
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -422,7 +445,7 @@ Checking number of processor cycles.
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -479,7 +502,7 @@ Checking number of processor cycles.
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -515,7 +538,7 @@ Checking number of processor cycles.
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -700,7 +723,7 @@ svn copy http://path/to/revision http://path/to/tag
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -854,7 +877,7 @@ visitors&lt;/a&gt;&lt;/small&gt;&lt;/div&gt;</iframe>
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -1050,7 +1073,7 @@ export PS1=&quot;[33[00m]u@h[33[01;34m] W [33[31m]$(parse_git_branch) [33[00m]$[
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -1118,7 +1141,7 @@ export PS1=&quot;[33[00m]u@h[33[01;34m] W [33[31m]$(parse_git_branch) [33[00m]$[
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
@@ -1216,7 +1239,7 @@ export PS1=&quot;[33[00m]u@h[33[01;34m] W [33[31m]$(parse_git_branch) [33[00m]$[
 	left: 50%;
     margin-top: auto; 
     margin-left: auto; 
-	opacity: 0.15;
+	opacity: 0.05;
 	}
 .center {
   display: block;
